Attempt to fix bug on chrome on mobile devices where the window size isn't getting updated correctly

--- a/src/main.css
+++ b/src/main.css
@@ -1,11 +1,17 @@
 @import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
 
-body{
+
+html, body{
     font-family: 'Poppins', sans-serif;
     margin: 0;
     padding: 0;
+    height: 100%;
 }
 
+#display {
+    height: 100%;
+    width: 100%;
+}
 .controlPanel{
     position: absolute;
     top: 0px;
